k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proyecto dwe1 grupo_2_2
  namespace: thymeleaf
spec:
  selector:
    matchLabels:
      app: proyecto dwe1 grupo_2_2
  replicas: 1
  template:
    metadata:
      labels:
         app: proyecto dwe1 grupo_2_2
    spec:
      imagePullSecrets:
         - name: github-secret
      containers:
         - name: proyecto dwe1 grupo_2_2
           image: localhost:5000/proyecto dwe1 grupo_2_2:latest
           ports:
              - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: proyecto dwe1 grupo_2_2
  namespace: thymeleaf
spec:
#  type: NodePort
  selector:
    app: proyecto dwe1 grupo_2_2
  ports:
    - protocol: TCP
      port: 8080
#      nodePort: 30001
      targetPort: 8080
