k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: proyecto dwe1 grupo_2_2
   namespace: thymeleaf
spec:
   ingressClassName: public
   rules:
   - host: gruposjaveriana.dynaco.co
     http:
       paths:
       - path: /proyecto dwe1 grupo_2_2
         pathType: Prefix
         backend:
           service:
             name: proyecto dwe1 grupo_2_2
             port:
               number: 8080
